[package]
name = "sarb"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
